<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hojun9904@gmail.com">banghojun</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  <depend>OpenCV</depend>
  <depend>pcl_conversions</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
